--- a/templates/especialidades/create-especialidades.html
+++ b/templates/especialidades/create-especialidades.html
@@ -1,51 +1,16 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RegisterSpeciality</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-</head>
-<body>
-    <form class="row g-3">{% csrf_token %}
-        
-        <div class="col-md-4">
-            <label class="form-label">Nombre</label>
-            <input type="text" class="form-control is-valid" id="validationServer01" required>
-        </div>
+{% extends 'home/base.html' %}
+{% block title %}
+    CreateEsp
+{% endblock title %}
 
-        <div class="col-md-4">
-            <label class="form-label">Descripcion</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" required>
-        </div>
-
-        <div class="col-md-4">
-            <label class="form-label">FechaModificacion</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" required>
-        </div>
-
-        <div class="col-md-4">
-            <label class="form-label">UsuarioRegistro</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" required>
-        </div>
-
-        <div class="col-md-4">
-            <label class="form-label">UsuarioModificacion</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" required>
-        </div>
-
-        <div class="col-md-4">
-            <label class="form-label">Activo</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" required>
-        </div>
-
-    
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Register</button>
-        </div>
+{% block body %}
+<div class="text-center">
+    <h3 class="text-info">Crear Especialidad</h3>
+</div>
+<div class="text-center" class="col-md-4">
+    <form method="post">{% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">Crear</button>
     </form>
-    
-</body>
-</html>
+</div>
+{% endblock body %}
