--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-light">
     
     <div class="container-fluid">
-        <a class="navbar-brand">Especialidades</a>
+        <a class="navbar-brand" href="{% url 'hospital_app:listEspecialidad' %}">Especialidades</a>
         <a class="navbar-brand">Medicos</a>
         <a class="navbar-brand">Pacientes</a>
         <a class="navbar-brand">Horarios</a>
