--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -12,7 +12,7 @@
             <img src="{% static 'img/mediana.jpg' %}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'img/diseño-web-para-hospitales.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/clinica.jpg' %}" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
