modificacion modelo medicos

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,7 @@
     
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'hospital_app:listEspecialidad' %}">Especialidades</a>
-        <a class="navbar-brand">Medicos</a>
+        <a class="navbar-brand" href="{% url 'hospital_app:listMedicos' %}">Medicos</a>
         <a class="navbar-brand">Pacientes</a>
         <a class="navbar-brand">Horarios</a>
         <a class="navbar-brand">Citas</a>
