--- a/templates/medicos/list-medicos.html
+++ b/templates/medicos/list-medicos.html
@@ -1,4 +1,66 @@
-<h1>Listado de clientes</h1>
-{% for medicos in list %}
-<p>{{medicos.Nombres}} - {{medicos.Apellidos}} - {{medicos.Direccion}} - {{medicos.Activo}}</p>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block content %}
+
+{% include 'includes/header.html'%}
+<div class="container">
+    <div class="col">
+        <div class="row">
+        </div>
+        <div class="row">
+            <table class="table caption-top">
+                <thead>
+                    <tr>
+                        <th scope="col">Nombres</th>
+                        <th scope="col">Apellidos</th>
+                        <th scope="col">Dni</th>
+                        <th scope="col">Id_Especialidad</th>
+                        <th scope="col">Direccion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <h1>lista de Medicos</h1>
+                    {% for espec in list %}
+                    <tr>
+                        <td>{{espec.Nombres}}</td>
+                        <td>{{espec.Apellidos}}</td>
+                        <td>{{espec.Dni}}</td>
+                        <td>{{espec.EspecialidadId}}</td>
+                        <td>{{espec.Direccion}}</td>
+                        <td><a class="btn btn-warning" href="{% url 'hospital_app:detailsMedicos' espec.id %}"role="button">Ver</a></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        
+        {% if list %}
+            <div class="row">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                
+                        {% if page_obj.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">Atras</a></li>
+                        {% endif %}
+                
+                        {% for pagina in paginator.page_range %}
+                            {% ifequal pagina page_obj.number %}
+                                <li class="page-item active" aria aria-current="page">
+                                    <a class="page">{{ pagina }}</a>
+                                </li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ pagina }}">{{ pagina }}</a></li>
+                            {% endifequal %}
+                        {% endfor %}
+                
+                        {% if page_obj.has_next %}
+                            <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Siguiente</a></li>
+                        {% endif %}
+                
+                    </ul>
+                </nav>
+            </div>
+        {% endif %}
+    </div>
+</div>      
+{% endblock content %}
